// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > has 'base' ('md') button 1`] = `
<DocumentFragment>
  <button
    class="btn disabled:text-opacity-50 btn-md rounded-md"
  >
    base button
  </button>
</DocumentFragment>
`;

exports[`Button > has 'large' ('lg') button 1`] = `
<DocumentFragment>
  <button
    class="btn disabled:text-opacity-50 btn-lg rounded-md"
  >
    large button
  </button>
</DocumentFragment>
`;

exports[`Button > has 'small' ('sm') button 1`] = `
<DocumentFragment>
  <button
    class="btn disabled:text-opacity-50 btn-sm rounded-md"
  >
    small button
  </button>
</DocumentFragment>
`;

exports[`Button > has 'tiny' ('xs') button 1`] = `
<DocumentFragment>
  <button
    class="btn disabled:text-opacity-50 btn-xs rounded-md"
  >
    tiny button
  </button>
</DocumentFragment>
`;

exports[`Button > has a label 1`] = `
<DocumentFragment>
  <button
    class="btn disabled:text-opacity-50 min-h-fit h-10 rounded-md"
  >
    Hello, World 🌍
  </button>
</DocumentFragment>
`;

exports[`Button > has a slot to render a 'link' tag 1`] = `
<DocumentFragment>
  <a
    class="btn disabled:text-opacity-50 min-h-fit h-10 rounded-md"
    role="none"
  >
    Button as link
  </a>
</DocumentFragment>
`;

exports[`Button > has a slot to render a 'paragraph' tag 1`] = `
<DocumentFragment>
  <p
    class="btn disabled:text-opacity-50 min-h-fit h-10 rounded-md"
    role="none"
  >
    Button as paragraph
  </p>
</DocumentFragment>
`;

exports[`Button > has a slot to render a 'span' tag 1`] = `
<DocumentFragment>
  <span
    class="btn disabled:text-opacity-50 min-h-fit h-10 rounded-md"
    role="none"
  >
    Button as span
  </span>
</DocumentFragment>
`;

exports[`Button > has accent variant 1`] = `
<DocumentFragment>
  <button
    class="btn disabled:text-opacity-50 btn-accent min-h-fit h-10 rounded-md"
  >
    accent button
  </button>
</DocumentFragment>
`;

exports[`Button > has default variant 1`] = `
<DocumentFragment>
  <button
    class="btn disabled:text-opacity-50 btn-default min-h-fit h-10 rounded-md"
  >
    default button
  </button>
</DocumentFragment>
`;

exports[`Button > has error variant 1`] = `
<DocumentFragment>
  <button
    class="btn disabled:text-opacity-50 btn-error min-h-fit h-10 rounded-md"
  >
    error button
  </button>
</DocumentFragment>
`;

exports[`Button > has ghost variant 1`] = `
<DocumentFragment>
  <button
    class="btn disabled:text-opacity-50 btn-ghost min-h-fit h-10 rounded-md"
  >
    ghost button
  </button>
</DocumentFragment>
`;

exports[`Button > has info variant 1`] = `
<DocumentFragment>
  <button
    class="btn disabled:text-opacity-50 btn-info min-h-fit h-10 rounded-md"
  >
    info button
  </button>
</DocumentFragment>
`;

exports[`Button > has link variant 1`] = `
<DocumentFragment>
  <button
    class="btn disabled:text-opacity-50 btn-link min-h-fit h-10 rounded-md"
  >
    link button
  </button>
</DocumentFragment>
`;

exports[`Button > has neutral variant 1`] = `
<DocumentFragment>
  <button
    class="btn disabled:text-opacity-50 btn-neutral min-h-fit h-10 rounded-md"
  >
    neutral button
  </button>
</DocumentFragment>
`;

exports[`Button > has no outline 1`] = `
<DocumentFragment>
  <button
    class="btn disabled:text-opacity-50 min-h-fit h-10 rounded-md"
  >
    Button has no outline
  </button>
</DocumentFragment>
`;

exports[`Button > has outline 1`] = `
<DocumentFragment>
  <button
    class="btn disabled:text-opacity-50 btn-outline min-h-fit h-10 rounded-md border-neutral-content"
  >
    Button has outline
  </button>
</DocumentFragment>
`;

exports[`Button > has primary variant 1`] = `
<DocumentFragment>
  <button
    class="btn disabled:text-opacity-50 btn-primary min-h-fit h-10 rounded-md"
  >
    primary button
  </button>
</DocumentFragment>
`;

exports[`Button > has secondary variant 1`] = `
<DocumentFragment>
  <button
    class="btn disabled:text-opacity-50 btn-secondary min-h-fit h-10 rounded-md"
  >
    secondary button
  </button>
</DocumentFragment>
`;

exports[`Button > has success variant 1`] = `
<DocumentFragment>
  <button
    class="btn disabled:text-opacity-50 btn-success min-h-fit h-10 rounded-md"
  >
    success button
  </button>
</DocumentFragment>
`;

exports[`Button > has warning variant 1`] = `
<DocumentFragment>
  <button
    class="btn disabled:text-opacity-50 btn-warning min-h-fit h-10 rounded-md"
  >
    warning button
  </button>
</DocumentFragment>
`;

exports[`Button > is not wide 1`] = `
<DocumentFragment>
  <button
    class="btn disabled:text-opacity-50 min-h-fit h-10 rounded-md"
  >
    Button is not wide
  </button>
</DocumentFragment>
`;

exports[`Button > is wide 1`] = `
<DocumentFragment>
  <button
    class="btn disabled:text-opacity-50 btn-wide min-h-fit h-10 rounded-md"
  >
    Button is wide
  </button>
</DocumentFragment>
`;
